[tool.poetry]
license = "Apache-2.0"
authors = [
  "Nelson Moore <nelson.moore@essential-soft.com>",
  "Mark Jensen <mark.jensen@nih.gov>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bento-meta = "^0.2.6"
bento-mdf = "^0.9.7"
click = "^8.1.3"
liquichange = "^0.2.1"
minicypher = {git = "https://github.com/CBIIT/minicypher"}
pytest = "^8.2.2"
